--- a/packages/components/src/newComponents/IconButton/styles.css
+++ b/packages/components/src/newComponents/IconButton/styles.css
@@ -9,6 +9,11 @@
 
 .arkyn_icon_button:hover {
   cursor: pointer;
+  filter: brightness(0.8);
+}
+
+html.dark .arkyn_icon_button:hover {
+  cursor: pointer;
   filter: brightness(1.2);
 }
 
