--- a/packages/components/src/newComponents/Button/styles.css
+++ b/packages/components/src/newComponents/Button/styles.css
@@ -51,7 +51,7 @@ html.dark .arkyn_button:hover {
 }
 
 .arkyn_button.outline {
-  background-color: rgba(var(--spotlight-outline), 1);
+  background-color: rgba(var(--input-background), 1);
   border-color: var(--border);
 }
 
