--- a/packages/components/src/newComponents/Table/TableContainer/styles.css
+++ b/packages/components/src/newComponents/Table/TableContainer/styles.css
@@ -10,7 +10,7 @@
   overflow-x: auto;
 
   border-radius: var(--rounded-cards);
-  background-color: var(--background-foreground);
+  background-color: var(--card);
 }
 
 .arkyn_table_container table {
