--- a/packages/components/src/newComponents/Table/TableBody/styles.css
+++ b/packages/components/src/newComponents/Table/TableBody/styles.css
@@ -27,7 +27,7 @@
 }
 
 .arkyn_table_body > tr:nth-child(even):hover > td {
-  background-color: var(--card-foreground);
+  background-color: var(--card-foreground-primary);
   filter: brightness(0.98);
 }
 
@@ -36,6 +36,6 @@ html.dark .arkyn_table_body > tr:nth-child(odd):hover > td {
 }
 
 html.dark .arkyn_table_body > tr:nth-child(even):hover > td {
-  background-color: var(--card-foreground);
+  background-color: var(--card-foreground-primary);
   filter: brightness(1.2);
 }
