--- a/packages/components/src/newComponents/Textarea/styles.css
+++ b/packages/components/src/newComponents/Textarea/styles.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
 
-  padding: 0 16px;
+  padding: 16px;
   gap: 8px;
   border-radius: var(--rounded-inputs);
 
@@ -22,6 +22,7 @@
   outline: none;
   background: transparent;
   width: 100%;
+  resize: none;
 }
 
 .arkyn_textarea textarea {
