feat: created card component removid background color in tbale component

--- a/packages/components/src/components/Table/TableContainer/styles.css
+++ b/packages/components/src/components/Table/TableContainer/styles.css
@@ -2,18 +2,14 @@
   display: flex;
   flex-direction: column;
 
-  padding: 20px;
   width: 100%;
   height: max-content;
 
   overflow-y: hidden;
   overflow-x: auto;
-
-  border-radius: var(--rounded-cards);
-  background-color: var(--card);
 }
 
-.arkyn_table_container table {
+.arkyn_table_container {
   border-collapse: separate;
   border-spacing: 0;
 }
