--- a/packages/components/src/components/Table/TableContainer/styles.css
+++ b/packages/components/src/components/Table/TableContainer/styles.css
@@ -9,7 +9,7 @@
   overflow-x: auto;
 }
 
-.arkyn_table_container {
+.arkyn_table_container table {
   border-collapse: separate;
   border-spacing: 0;
 }
