feat: add empty line in table, fix popover show

--- a/packages/components/src/components/Popover/styles.css
+++ b/packages/components/src/components/Popover/styles.css
@@ -6,7 +6,7 @@
   display: none;
 }
 
-.arkynPopover.show .arkynPopoverContent {
+.arkynPopover.visibleTrue .arkynPopoverContent {
   display: unset;
 }
 
