--- a/packages/components/src/components/Table/TableBody/styles.css
+++ b/packages/components/src/components/Table/TableBody/styles.css
@@ -41,3 +41,22 @@ html.dark .arkynTableBody > tr:nth-child(even):hover > td {
   background-color: var(--card-foreground-primary);
   filter: brightness(1.2);
 }
+
+.arkynTableBodyEmptyLine > td {
+  background-color: var(--card-foreground-primary);
+  height: 64px;
+}
+
+.arkynTableBodyEmptyLine > td > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  text-align: center;
+  white-space: nowrap;
+
+  font-weight: 400;
+  font-size: 14px;
+
+  color: var(--text-body);
+}
