feat: Added centering for when the alert component does not have the alertTitle component within it

--- a/packages/components/src/components/Alert/AlertContainer/styles.css
+++ b/packages/components/src/components/Alert/AlertContainer/styles.css
@@ -8,6 +8,10 @@
   border-radius: var(--rounded-cards);
 }
 
+.arkynAlertContainer.nonExistsAlertTitle {
+  align-items: center;
+}
+
 .arkynAlertContainer.danger {
   background: rgba(var(--spotlight-danger), 0.1);
   border-color: rgba(var(--spotlight-danger), 0.4);
