--- a/packages/components/src/components/Checkbox/styles.css
+++ b/packages/components/src/components/Checkbox/styles.css
@@ -18,36 +18,48 @@
 
 /* SIZE */
 .arkynCheckbox.sm {
-  height: 16px;
-  width: 16px;
+  min-height: 16px;
+  min-width: 16px;
+  max-height: 16px;
+  max-width: 16px;
   border-radius: calc(var(--rounded-inputs) * 0.3333);
 }
 
 .arkynCheckbox.sm > svg {
   min-height: 12px;
   min-width: 12px;
+  max-height: 12px;
+  max-width: 12px;
 }
 
 .arkynCheckbox.md {
-  height: 20px;
-  width: 20px;
+  min-height: 20px;
+  min-width: 20px;
+  max-height: 20px;
+  max-width: 20px;
   border-radius: calc(var(--rounded-inputs) * 0.6667);
 }
 
 .arkynCheckbox.md > svg {
   min-height: 14px;
   min-width: 14px;
+  max-height: 14px;
+  max-width: 14px;
 }
 
 .arkynCheckbox.lg {
-  height: 24px;
-  width: 24px;
+  min-height: 24px;
+  min-width: 24px;
+  max-height: 24px;
+  max-width: 24px;
   border-radius: var(--rounded-inputs);
 }
 
 .arkynCheckbox.lg > svg {
   min-height: 14px;
   min-width: 14px;
+  max-height: 14px;
+  max-width: 14px;
 }
 
 /* CHECKED */
