feat: added character limit to richtext component

--- a/packages/components/src/components/RichText/styles.css
+++ b/packages/components/src/components/RichText/styles.css
@@ -23,3 +23,13 @@
   outline: none;
   min-height: 300px;
 }
+
+.arkynRichText .restatesCharacters {
+  display: block;
+  margin-left: auto;
+  padding: 8px;
+
+  font-size: 16px;
+  font-weight: 600;
+  color: rgba(var(--spotlight-danger), 1);
+}
