--- a/packages/components/src/components/FileUpload/styles.css
+++ b/packages/components/src/components/FileUpload/styles.css
@@ -1,10 +1,10 @@
-.arkynImageUploadContainer {
+.arkynFileUploadContainer {
   display: flex;
   flex-direction: column;
   gap: 6px;
 }
 
-.arkynImageUpload {
+.arkynFileUpload {
   outline: 1px solid transparent;
 
   border-width: 1px;
@@ -12,21 +12,21 @@
   border-radius: var(--rounded-inputs);
 
   width: 100%;
-  height: 174px;
+  height: 127px;
   max-width: 475px;
 
   background: rgba(var(--input-background), 1);
 }
 
-.arkynImageUpload.hasImage {
+.arkynFileUpload.hasFile {
   border-style: solid;
 }
 
-.arkynImageUpload.noHasImage {
+.arkynFileUpload.noHasFile {
   border-style: dashed;
 }
 
-.arkynImageUpload.hasError {
+.arkynFileUpload.hasError {
   border-color: rgb(var(--spotlight-danger));
-  outline-color: Ørgb(var(--spotlight-danger));
+  outline-color: rgb(var(--spotlight-danger));
 }
