--- a/packages/newComponents/src/components/MultiSelect/components/MultiSelectOptionsContainer/styles.css
+++ b/packages/newComponents/src/components/MultiSelect/components/MultiSelectOptionsContainer/styles.css
@@ -14,7 +14,7 @@
   flex-direction: column;
 
   flex: 1;
-  overflow: auto;
+  overflow: hidden;
   height: max-content;
 
   border: 1px solid var(--border);
